--- a/GameOfTheGenerals.ApplicationLogic/GameOfTheGenerals.ApplicationLogic.csproj
+++ b/GameOfTheGenerals.ApplicationLogic/GameOfTheGenerals.ApplicationLogic.csproj
@@ -53,6 +53,8 @@
     <Compile Include="IPiece.cs" />
     <Compile Include="IPlayer.cs" />
     <Compile Include="ISquare.cs" />
+    <Compile Include="Move.cs" />
+    <Compile Include="InvalidMoveResult.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rank.cs" />
