--- a/GameOfTheGenerals.Tests/packages.config
+++ b/GameOfTheGenerals.Tests/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="FsCheck" version="2.10.8" targetFramework="net452" />
+  <package id="FsCheck.NUnit" version="2.10.8" targetFramework="net452" />
+  <package id="FSharp.Core" version="4.0.0.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
@@ -8,4 +11,6 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
+  <package id="NUnit" version="3.10.1" targetFramework="net452" />
+  <package id="NUnit3TestAdapter" version="3.10.0" targetFramework="net452" />
 </packages>
