--- a/GameOfTheGenerals.Tests/packages.config
+++ b/GameOfTheGenerals.Tests/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Enums.NET" version="2.3.1" targetFramework="net452" />
   <package id="FsCheck" version="2.10.8" targetFramework="net452" />
   <package id="FsCheck.NUnit" version="2.10.8" targetFramework="net452" />
   <package id="FSharp.Core" version="4.0.0.1" targetFramework="net452" />
