--- a/GameOfTheGenerals.Web/GameOfTheGenerals.Web.csproj
+++ b/GameOfTheGenerals.Web/GameOfTheGenerals.Web.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Enums.NET" Version="2.3.1" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.6" />
   </ItemGroup>
 
