--- a/GameOfTheGenerals.ApplicationLogic/GameOfTheGenerals.ApplicationLogic.csproj
+++ b/GameOfTheGenerals.ApplicationLogic/GameOfTheGenerals.ApplicationLogic.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>GameOfTheGenerals.ApplicationLogic</RootNamespace>
     <AssemblyName>GameOfTheGenerals.ApplicationLogic</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
