--- a/GameOfTheGenerals.Web/GameOfTheGenerals.Web.csproj
+++ b/GameOfTheGenerals.Web/GameOfTheGenerals.Web.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Enums.NET" Version="2.3.1" />
+    <PackageReference Include="Microsoft.AspNet.SignalR" Version="2.2.3" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.6" />
   </ItemGroup>
 
